# tara

./: p.py
taracol/: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml  package.json
taracol/core/taracol-crypto/: Cargo.toml
taracol/core/taracol-crypto/src/: lib.rs
taracol/core/taracol-protocol/: Cargo.toml
taracol/core/taracol-protocol/src/: lib.rs
taracol/core/taracol-types/: Cargo.toml
taracol/core/taracol-types/src/: lib.rs
taracol/gateway/: Cargo.toml
taracol/gateway/src/: lib.rs  main.rs
taracol/scripts/: build.sh  setup-dev.sh
taracol/services/ai-service/: Cargo.toml
taracol/services/ai-service/src/: lib.rs  main.rs  storage.rs
taracol/services/federation-service/: Cargo.toml
taracol/services/federation-service/src/: lib.rs  main.rs
taracol/services/identity-service/: Cargo.toml
taracol/services/identity-service/src/: lib.rs  main.rs
taracol/services/pds-service/: Cargo.toml
taracol/services/pds-service/src/: config.rs  lib.rs  main.rs
taracol/services/relay-service/: Cargo.toml
taracol/services/relay-service/src/: handlers.rs  lib.rs  main.rs
taracol/services/web-service/: Cargo.toml
taracol/services/web-service/src/: lib.rs  main.rs
taracol/tara-client/mobile/: package.json
taracol/tara-client/web/: package.json
