[workspace]
resolver = "2"
members = [
    "core/taracol-types",
    "core/taracol-crypto",
    "core/taracol-protocol",
    "services/identity-service",
    "services/web-service",
    "services/relay-service",
    "services/pds-service", 
    "services/ai-service",
    "services/federation-service",
    "gateway",
    "tools/lexicon-codegen",
    "tools/benchmarks",
    "examples/basic-node",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "PROPRIETARY"
authors = ["Your Name <your.email@domain.com>"]

[workspace.dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"

# Crypto
ed25519-dalek = "2.0"
bs58 = "0.5"
ring = "0.17"
rand = "0.8"

# Network
quinn = "0.10"
rustls = "0.21"
tonic = "0.10"
prost = "0.12"
axum = "0.7"
hyper = "0.14"
reqwest = { version = "0.11", features = ["json"] }

# Database
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "uuid", "chrono"] }
redis = { version = "0.24", features = ["tokio-comp"] }

# Utilities
clap = { version = "4.0", features = ["derive"] }
config = "0.13"
dotenv = "0.15"
