[package]
name = "taracol-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
taracol-types = { path = "../taracol-types" }
taracol-crypto = { path = "../taracol-crypto" }
quinn.workspace = true
rustls.workspace = true
tokio.workspace = true
serde.workspace = true
anyhow.workspace = true
tracing.workspace = true
